validate token as common